--- a/HelloRedux/HelloRedux.csproj
+++ b/HelloRedux/HelloRedux.csproj
@@ -7,6 +7,7 @@
     <IsPackable>false</IsPackable>
     <SpaRoot>ClientApp\</SpaRoot>
     <DefaultItemExcludes>$(DefaultItemExcludes);$(SpaRoot)node_modules\**</DefaultItemExcludes>
+    <UserSecretsId>efa59192-c77a-47b9-ad83-1197ce58f64a</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
